# plagiarinator

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml  pyproject.toml  requirements.txt
crates/decider-model/: Cargo.toml
crates/decider-model/src/: lib.rs  model.rs
crates/decider-model/src/data/: analysis.rs  ast.rs  graph.rs  mod.rs
crates/decider-model/src/layers/: gcn.rs  gin.rs  graph.rs  mod.rs
crates/decider-python/: Cargo.toml  pyproject.toml
crates/decider-python/src/: lib.rs
crates/tensorboard-logger/: Cargo.toml
crates/tensorboard-logger/src/: lib.rs
datasets/: .gitignore  authentic1.cpp  authentic2.cpp  plagiarized1.cpp  plagiarized2.cpp  refs.md  testfile1.cpp
datasets/self-sourced-llm/: README.md  ground-truth-static-anon.txt  labels.json  manifest.json
datasets/self-sourced-llm/task-1/: auth1.cpp  auth1_plag2.cpp  auth1_plag4.cpp  auth2.cpp  auth2_plag2.cpp  auth2_plag4.cpp  auth3.cpp  auth3_plag3.cpp  auth4.cpp  auth4_plag1.cpp  auth4_plag3.cpp  auth4_plag4.cpp  auth5.cpp  auth5_plag1.cpp  auth5_plag3.cpp  auth6.cpp  auth6_plag2.cpp  auth6_plag3.cpp  auth7_plag2.cpp  auth7_plag4.cpp  auth8_plag3.cpp  task.md
datasets/self-sourced-llm/task-10/: auth1_plag1.cpp  auth2_plag1.cpp  auth3_plag2.cpp  auth3_plag3.cpp  auth4.cpp  auth4_plag1.cpp  auth4_plag2.cpp  auth5_plag2.cpp  auth5_plag4.cpp  auth6.cpp  auth6_plag4.cpp  auth7_plag1.cpp  auth7_plag2.cpp  auth8.cpp  auth8_plag1.cpp  task.md
datasets/self-sourced-llm/task-11/: auth1_plag1.cpp  auth1_plag4.cpp  auth2_plag1.cpp  auth2_plag2.cpp  auth2_plag3.cpp  auth2_plag4.cpp  auth4_plag2.cpp  auth4_plag3.cpp  auth4_plag4.cpp  auth5_plag1.cpp  auth6_plag2.cpp  auth7.cpp  auth7_plag4.cpp  auth8.cpp  auth8_plag2.cpp  auth8_plag4.cpp  task.md
datasets/self-sourced-llm/task-12/: auth1_plag1.cpp  auth1_plag2.cpp  auth1_plag3.cpp  auth1_plag4.cpp  auth2.cpp  auth2_plag1.cpp  auth2_plag2.cpp  auth2_plag4.cpp  auth3.cpp  auth3_plag2.cpp  auth4.cpp  auth4_plag4.cpp  auth5_plag2.cpp  auth5_plag3.cpp  auth5_plag4.cpp  auth6.cpp  auth6_plag2.cpp  auth6_plag4.cpp  auth7.cpp  auth7_plag2.cpp  auth7_plag4.cpp  auth8.cpp  auth8_plag1.cpp  auth8_plag3.cpp  task.md
datasets/self-sourced-llm/task-13/: auth1.cpp  auth1_plag4.cpp  auth2.cpp  auth2_plag2.cpp  auth2_plag3.cpp  auth3_plag1.cpp  auth3_plag2.cpp  auth3_plag4.cpp  auth4_plag3.cpp  auth5.cpp  auth5_plag2.cpp  auth5_plag4.cpp  auth6.cpp  auth6_plag2.cpp  auth6_plag3.cpp  auth7_plag1.cpp  auth7_plag3.cpp  auth8.cpp  auth8_plag1.cpp  auth8_plag2.cpp  task.md
datasets/self-sourced-llm/task-14/: auth1.cpp  auth1_plag1.cpp  auth2_plag1.cpp  auth2_plag4.cpp  auth3_plag1.cpp  auth3_plag2.cpp  auth3_plag4.cpp  auth4.cpp  auth4_plag2.cpp  auth5_plag2.cpp  auth5_plag3.cpp  auth6_plag1.cpp  auth6_plag2.cpp  auth6_plag4.cpp  auth7_plag1.cpp  auth7_plag2.cpp  auth8.cpp  auth8_plag1.cpp  auth8_plag2.cpp  auth8_plag3.cpp  auth8_plag4.cpp  task.md
datasets/self-sourced-llm/task-15/: auth1_plag3.cpp  auth1_plag4.cpp  auth2.cpp  auth2_plag3.cpp  auth2_plag4.cpp  auth3_plag2.cpp  auth4_plag1.cpp  auth5_plag1.cpp  auth5_plag2.cpp  auth5_plag3.cpp  auth5_plag4.cpp  auth6.cpp  auth6_plag1.cpp  auth6_plag2.cpp  auth7.cpp  auth7_plag3.cpp  auth8.cpp  auth8_plag1.cpp  auth8_plag3.cpp  task.md
datasets/self-sourced-llm/task-16/: auth1_plag2.cpp  auth1_plag3.cpp  auth2_plag1.cpp  auth2_plag2.cpp  auth3.cpp  auth3_plag1.cpp  auth3_plag4.cpp  auth4.cpp  auth4_plag3.cpp  auth5_plag3.cpp  auth5_plag4.cpp  auth6.cpp  auth6_plag1.cpp  auth6_plag2.cpp  auth6_plag4.cpp  auth7.cpp  auth8.cpp  auth8_plag2.cpp  auth8_plag3.cpp  task.md
datasets/self-sourced-llm/task-17/: auth1_plag2.cpp  auth1_plag3.cpp  auth1_plag4.cpp  auth2_plag3.cpp  auth3_plag1.cpp  auth3_plag4.cpp  auth4_plag4.cpp  auth5.cpp  auth5_plag2.cpp  auth5_plag3.cpp  auth6_plag2.cpp  auth6_plag3.cpp  auth6_plag4.cpp  auth7_plag2.cpp  auth7_plag3.cpp  auth8.cpp  auth8_plag1.cpp  auth8_plag2.cpp  auth8_plag3.cpp  task.md
datasets/self-sourced-llm/task-18/: auth1_plag1.cpp  auth1_plag2.cpp  auth2.cpp  auth2_plag2.cpp  auth2_plag3.cpp  auth2_plag4.cpp  auth4.cpp  auth4_plag1.cpp  auth4_plag4.cpp  auth5_plag4.cpp  auth6_plag3.cpp  auth7.cpp  auth7_plag3.cpp  auth7_plag4.cpp  auth8_plag3.cpp  task.md
datasets/self-sourced-llm/task-19/: auth1.cpp  auth1_plag1.cpp  auth1_plag2.cpp  auth1_plag3.cpp  auth2.cpp  auth3.cpp  auth3_plag1.cpp  auth3_plag3.cpp  auth4.cpp  auth4_plag1.cpp  auth4_plag3.cpp  auth4_plag4.cpp  auth5.cpp  auth5_plag1.cpp  auth5_plag2.cpp  auth5_plag3.cpp  auth5_plag4.cpp  auth6_plag2.cpp  auth7_plag1.cpp  auth7_plag3.cpp  auth7_plag4.cpp  auth8.cpp  auth8_plag2.cpp  task.md
datasets/self-sourced-llm/task-2/: auth1.cpp  auth1_plag3.cpp  auth1_plag4.cpp  auth2_plag2.cpp  auth3_plag2.cpp  auth3_plag3.cpp  auth4_plag2.cpp  auth4_plag3.cpp  auth5_plag1.cpp  auth5_plag2.cpp  auth5_plag4.cpp  auth6_plag3.cpp  auth6_plag4.cpp  auth7.cpp  auth7_plag1.cpp  auth7_plag3.cpp  auth7_plag4.cpp  auth8_plag2.cpp  auth8_plag3.cpp  auth8_plag4.cpp  task.md
datasets/self-sourced-llm/task-20/: auth1_plag1.cpp  auth1_plag2.cpp  auth1_plag4.cpp  auth2.cpp  auth2_plag2.cpp  auth2_plag4.cpp  auth3.cpp  auth4.cpp  (+13 more)
docs/: GraphCompressionIdea.rnote
plagiarinator/: __init__.py  cli.py  gui.py  parser.py  run.py
plagiarinator/cli/: __main__.py
plagiarinator/common/: multithreading.py
plagiarinator/metrics/: common.py  tree_edit_distance.py
scripts/data_loading/: Cargo.toml
scripts/ga_config_optimization/: __main__.py  dataset_loader.py
scripts/graph_deeplearning/: Cargo.toml
scripts/graph_deeplearning/src/: learning_run.rs  lib.rs  loading.rs  logging.rs  main.rs  parsing.rs  validation.rs
scripts/graph_deeplearning/src/layers/: mod.rs
scripts/graph_deeplearning/src/model/: ast.rs  graph.rs  mod.rs
scripts/graph_deeplearning/src/nn/: decider.rs  mod.rs
scripts/radiate_config_optimizer/: Cargo.toml
src/: parser.py  run.py
src/cli/: __main__.py
src/metrics/: common.py  cosine_similarity.py  jaccard_multiset.py  pq_gram.py
visualization/: plagiarism_comparison.typ
(+579 files in other folders)
