[workspace]
members = [
    "scripts/data_loading",
    "scripts/graph_deeplearning",
]
resolver = "2"


[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
itertools = "0.14.0"
fastrand = "2.3.0"
fxhash = "0.2.1"
rand = "0.10.1"
thiserror = "2.0.10"
# NdArray+autodiff for CPU; `graph_deeplearning` enables `burn/cuda` when built with `--features cuda`.
burn  = { version =  "0.20.1", features = ["ndarray", "autodiff", "openblas","autotune", "fusion"], default-features = false}

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
