[project]
name = "plagiarinator"
version = "0.1.0"
description = "A tool for plagiarism detection with both GUI and CLI."
authors = [
    { name = "Tim Peko", email = "timerertim@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "apted",
    "argparse",
    "numpy",
    # required because default build from source is broken (README.md not found)
    "radiate @ git+https://github.com/pkalivas/radiate#subdirectory=py-radiate@master", 
]

[project.scripts]
plagiarinator = "plagiarinator.cli:main"

[project.gui-scripts]
plagiarinator-gui = "plagiarinator.gui:main"

[tool.setuptools]
package-dir = {"" = "plagiarinator"}
