[project]
name = "plagiarinator"
version = "0.2.0"
description = "C++ plagiarism detection with a deep learning model (GUI and CLI)."
authors = [
    { name = "Tim Peko", email = "timerertim@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "decider-python @ file:./crates/decider-python",
    "PySimpleGUI>=5.0.0",
]

[project.scripts]
plagiarinator = "plagiarinator.cli:main"
plagiarinator-gui = "plagiarinator.gui:main"

[tool.setuptools]
packages = ["plagiarinator"]
