[package]
name = "decider-model"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true, features = ["store"] }
burn-store = { workspace = true }
tree-sitter = "0.26.8"
tree-sitter-python = "0.25.0"
tree-sitter-cpp = "0.23.4"
thiserror = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }