[package]
name = "graph_deeplearning"
version = "0.1.0"
edition = "2021"

[features]
# Default: CPU via Burn's NdArray backend. Enable `cuda` for NVIDIA GPUs (see workspace `burn` + `burn/cuda`).
default = []
cuda = ["burn/cuda"]
cubecl-cpu = ["burn/cpu"]

[dependencies]
data_loading = { path = "../data_loading" }
burn = { workspace = true }
fxhash = { workspace = true }
rand = { workspace = true }
tree-sitter = "0.26.8"
tree-sitter-python = "0.25.0"
tree-sitter-cpp = "0.23.4"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

