[package]
name = "graph_deeplearning"
version = "0.1.0"
edition = "2021"

[features]
# Default: CPU via Burn's NdArray backend. Enable `cuda` for NVIDIA GPUs (see workspace `burn` + `burn/cuda`).
default = []
cuda = ["burn/cuda"]
cubecl-cpu = ["burn/cpu"]
torch = ["burn/tch"]

[dependencies]
burn = { workspace = true }
burn-store = { workspace = true, features = ["burnpack"] }
data_loading = { path = "../data_loading" }
decider-model = { path = "../../crates/decider-model" }
rustc-hash = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4.30"


